--- a/src/pages/allPages.css
+++ b/src/pages/allPages.css
@@ -4,7 +4,7 @@
 }
 
 .blockStore{
-    padding-top: 100px;
+    padding-top: 30px;
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
@@ -60,7 +60,7 @@
    background-attachment: fixed;
    background-position: center center;
    margin: 0; /* Remova as margens padrão para evitar espaços em branco */
-   padding: 0; /* Remova o preenchimento padrão */
+   padding: 0;
    height: 100vh;
 }
 
