--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,12 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
+	/* margin: 0;
 	padding: 0;
-	border: 0;
+	border: 0; */
 	/* font-size: 100%; */
 	/* font: inherit; */
-	vertical-align: baseline;
+	/* vertical-align: baseline; */
 	line-height: 1;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -31,32 +31,32 @@ time, mark, audio, video {
    text-decoration: none;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+/* article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
-}
+} */
 
-ol, ul {
+/* ol, ul {
 	list-style: none;
-}
-blockquote, q {
+} */
+/* blockquote, q {
 	quotes: none;
-}
-blockquote:before, blockquote:after,
+} */
+/* blockquote:before, blockquote:after,
 q:before, q:after {
 	content: '';
 	content: none;
-}
-table {
+} */
+/* table {
 	border-collapse: collapse;
 	border-spacing: 0;
-}
+} */
 
-code {
+/* code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 	monospace;
-}
-
+} */
+/* 
 .App {
     background-color: rgba(0, 0, 0, 0);
-}
+} */
