--- a/src/pages/loginStyle.css
+++ b/src/pages/loginStyle.css
@@ -10,7 +10,8 @@
 
 
 .subMain {
-    width: 250px;
+    width: auto;
+    height: auto;
     background-color: #f5f5f5;
     border: 1px solid #ccc;
     border-radius: 8px;
@@ -32,7 +33,7 @@
   
   .login-input {
     display: flex;
-    width: 95%;
+    width: 300px;
     height: 30px;
     padding-left: 8px;
     border: 1px solid #ccc;
