--- a/src/pages/registerStyle.css
+++ b/src/pages/registerStyle.css
@@ -12,8 +12,8 @@
 .register-container {
     align-items: center;
     justify-content: center;
-    width: 250px;
-    height: 440px;
+    width: auto;
+    height: auto;
     padding: 20px;
     background-color: #f5f5f5;
     border: 1px solid #ccc;
@@ -35,7 +35,7 @@
   }
   
   .register-input {
-    width: 95%;
+    width: 100%;
     height: 30px;
     padding-left: 8px;
     margin-bottom: 10px;
